test/valid/array.js
var x = [1,2,3];
var y = ['a','b','c'];
var empty = [];
var i = 0;
empty = [1];
empty[0];
x[1];
y[i];
null;
