test/invalid/array.js
var x = [1, 2, 'a'];
